  the decision between generative and applicative functor application
  was made based on the type of `F`. With this patch, we now distinguish
  these two application forms; writing `F (struct end)` for a generative
  functor leads to new warning 73.
  (Frederic Bour and Richard Eisenberg, review by Florian Angeletti)

### Runtime system:

- #12001: Fix book keeping for last finalisers during the minor cycle
  (KC Sivaramakrishnan and Enguerrand Decorne, report by Guillaume Bury
   and Vincent Laviron, review by Sadiq Jaffer and KC Sivaramakrishnan)

- #11919: New runtime events counters for major heap stats and minor heap
  resizing.
  (Sadiq Jaffer, review by Gabriel Scherer and David Allsopp)

- #11287, #11872, #11955: Clean up reserved header bits (once used for
  Spacetime profiling).
  (Nick Barnes, review by Gabriel Scherer and Damien Doligez)

- #11750: Decouple major slice from minor GC.
  (KC Sivaramakrishnan, review by Sadiq Jaffer, Guillaume Munch-Maccagnoni and
  Damien Doligez)

- #11642: Restore Cygwin port. Add GC messages for address space reservations
  when OCAMLRUNPARAM option v includes 0x1000.
  (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni
  and Gabriel Scherer)

- #11743: Speed up weak array operations
  (KC Sivaramakrishnan, review by François Bobot and Sadiq Jaffer)

- #11691, #11706: use __asm__ instead of asm for strict ISO C conformance
  (Xavier Leroy, report by Gregg Reynolds , review by Sadiq Jaffer)

- #11764: add prototypes to old-style C function definitions and declarations
  (Antonin Décimo, review by Xavier Leroy)

- #11796: protect lazy computation of code fragment digest by a mutex.
  This makes the thread sanitizer happier, and avoids duplicating
  the hashing work.
  (Gabriel Scherer, review by Xavier Leroy, report by Olivier Nicole)

- #11137: new `Unsafe_store_tag(val, new_tag)` macro to stop using
  `Tag_val(val)` as lvalue.
  (Gabriel Scherer, review by Xavier Leroy, Guillaume Munch-Maccagnoni